Bug 1158838 - Add some gfxCriticalError logging. r=milan